[gd_scene load_steps=10 format=2]

[ext_resource path="res://Objects/playerDoor.gd" type="Script" id=1]
[ext_resource path="res://Art/TileMap.tres" type="TileSet" id=2]
[ext_resource path="res://Art/frames/doors_leaf_open.png" type="Texture" id=3]
[ext_resource path="res://Art/frames/doors_leaf_closed.png" type="Texture" id=4]
[ext_resource path="res://Sounds/my_sounds/door.wav" type="AudioStream" id=5]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 12, 0.375 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16, 16 )

[sub_resource type="SegmentShape2D" id=3]
b = Vector2( 0, 32 )

[sub_resource type="SegmentShape2D" id=4]
a = Vector2( 0, -22 )

[node name="playerDoor" type="StaticBody2D"]
collision_layer = 4
script = ExtResource( 1 )

[node name="DoorArea" type="Area2D" parent="."]

[node name="Opened" type="Sprite" parent="DoorArea"]
texture = ExtResource( 3 )

[node name="Closed" type="Sprite" parent="DoorArea"]
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="DoorArea"]
position = Vector2( 0, -15.625 )
shape = SubResource( 5 )

[node name="CollisionClosed" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="CollisionOpened" type="CollisionShape2D" parent="."]
position = Vector2( -11, -16 )
shape = SubResource( 3 )

[node name="CollisionOpened2" type="CollisionShape2D" parent="."]
position = Vector2( 15, 6 )
shape = SubResource( 4 )

[node name="TileMap" type="TileMap" parent="."]
z_index = 1
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( -65537, 3, 1, -131072, 3, 2, -1, 3, 65540, -65536, 3, 65541 )

[node name="doorOpen" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
pitch_scale = 1.9
max_distance = 5000.0
attenuation = 3.73213

[connection signal="body_entered" from="DoorArea" to="." method="_on_DoorArea_body_entered"]
[connection signal="body_exited" from="DoorArea" to="." method="_on_DoorArea_body_exited"]
